--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+
   </ItemGroup>
 
   <PropertyGroup>
