--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="NRedisStack" Version="0.8.1" />
   </ItemGroup>
 
   <PropertyGroup>
